# akkoma-exporter

./: .gitignore  README.md  flake.nix  healthcheck-result-example.json  nixos-module.nix  pyproject.toml
akkoma_exporter/: __init__.py  cli.py  collector.py
