[tool.poetry]
name = "akkoma-exporter"
version = "0.1.0"
description = ""
authors = ["Astrid Yu <astrid@astrid.tech>"]
readme = "README.md"
packages = [{include = "akkoma_exporter"}]

[tool.poetry.scripts]
akkoma-exporter = "akkoma_exporter:cli"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.15.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
